[package]
name = "cobrita"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
rocket = "0.4.6"
rocket_contrib = {version = "0.4.6", default-features = false, features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
